--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -19,10 +19,14 @@
                <h4><a><%=campground.name%></a></h4>
                <p><%=campground.description%></p>
                <p><em>Submitted by: <%=campground.author.username%></em></p>
-               <p>
-                  <a href="/<%=campground._id%>/edit" class="btn btn-warning">Edit</a>
-               </p>
-               <form method="POST" action="/<%=campground._id%>?_method=DELETE">
+
+               <a href="/<%=campground._id%>/edit" class="btn btn-warning">Edit</a>
+
+               <form
+                  id="delete-form"
+                  method="POST"
+                  action="/campgrounds/<%=campground._id%>?_method=DELETE"
+               >
                   <button class="btn btn-danger">Delete</button>
                </form>
             </div>
