--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,14 +20,14 @@
                <p><%=campground.description%></p>
                <p><em>Submitted by: <%=campground.author.username%></em></p>
 
-               <a href="/<%=campground._id%>/edit" class="btn btn-warning">Edit</a>
+               <a href="/<%=campground._id%>/edit" class="btn btn-warning btn-xs">Edit</a>
 
                <form
                   id="delete-form"
                   method="POST"
                   action="/campgrounds/<%=campground._id%>?_method=DELETE"
                >
-                  <button class="btn btn-danger">Delete</button>
+                  <button class="btn btn-danger btn-xs">Delete</button>
                </form>
             </div>
          </div>
