--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,7 +20,10 @@
                <p><%=campground.description%></p>
                <p><em>Submitted by: <%=campground.author.username%></em></p>
 
-               <a href="/<%=campground._id%>/edit" class="btn btn-warning btn-xs">Edit</a>
+               <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
+               <a href="/campgrounds/<%=campground._id%>/edit" class="btn btn-warning btn-xs"
+                  >Edit</a
+               >
 
                <form
                   id="delete-form"
@@ -29,6 +32,7 @@
                >
                   <button class="btn btn-danger btn-xs">Delete</button>
                </form>
+               <% } %>
             </div>
          </div>
          <div class="well">
@@ -46,6 +50,11 @@
                   <p>
                      <%= comment.text %>
                   </p>
+                  <a
+                     href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit"
+                     class="btn btn-xs btn-warning"
+                     >Edit</a
+                  >
                </div>
             </div>
 
