--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -26,7 +26,7 @@
                >
 
                <form
-                  id="delete-form"
+                  class="delete-form"
                   method="POST"
                   action="/campgrounds/<%=campground._id%>?_method=DELETE"
                >
@@ -50,11 +50,20 @@
                   <p>
                      <%= comment.text %>
                   </p>
+                  <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
                   <a
                      href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit"
                      class="btn btn-xs btn-warning"
                      >Edit</a
                   >
+                  <form
+                     class="delete-form"
+                     action="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>?_method=DELETE"
+                     method="POST"
+                  >
+                     <input type="submit" class="btn btn-xs btn-danger" value="Delete" />
+                  </form>
+                  <% } %>
                </div>
             </div>
 
